# rust-turtle-viewer

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: publish.yaml  rust.yml
images/: postgres.Dockerfile  provisioning_data.sh
migrations/2023-12-05-150203_turtles/: down.sql  up.sql
migrations/2023-12-11-153607_init-db/: down.sql  up.sql
src/: db.rs  error_handler.rs  main.rs  schema.rs  test.rs
src/turtles/: mod.rs  model.rs  routes.rs  tests.rs
