[package]
name = "rust-turtle-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.17"
chrono = { version = "0.4.31", features = ["serde", "rustc-serialize"] }
mime = "0.3.17"
dotenvy = "0.15"
postgres = "0.19.7"
actix-rt = "2.9.0"
dotenv = "0.15.0"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.1.0"
lazy_static = "1.4"
serde_json = "1.0"
r2d2 = "0.8"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
